feat: storage providers handle data store
* feat: storage providers handle data store

* feat: implement storageprovider jsonfile
