# docs/swagger.json
@@ -61,9 +61,9 @@
                 }
             }
         },
-        "/api/v1//admin/server/stop": {
+        "/api/v1//admin/server/shutdown": {
             "post": {
-                "description": "Stop server",
+                "description": "Shutdown server",
                 "consumes": [
                     "application/json"
                 ],
@@ -73,8 +73,8 @@
                 "tags": [
                     "Admin"
                 ],
-                "summary": "Stop server",
-                "operationId": "server-stop",
+                "summary": "Shutdown server",
+                "operationId": "server-shutdown",
                 "responses": {
                     "200": {
                         "description": "successful operation",
@@ -205,7 +205,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.JSONResultSuccess"
                         }
                     },
                     "400": {
@@ -369,7 +369,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "string"
+                                "$ref": "#/definitions/types.StreamInfo"
                             }
                         }
                     },
@@ -408,9 +408,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "successful operation",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/stream.RebuildStreamIndexResponse"
                         }
                     },
                     "500": {
@@ -424,7 +424,7 @@
         },
         "/api/v1/stream/{streamuuid}": {
             "get": {
-                "description": "Get the description for the given stream UUID",
+                "description": "Get information for the given stream UUID",
                 "consumes": [
                     "application/json"
                 ],
@@ -434,8 +434,8 @@
                 "tags": [
                     "Stream"
                 ],
-                "summary": "Get stream description",
-                "operationId": "stream-get-description",
+                "summary": "Get stream information",
+                "operationId": "stream-get-information",
                 "parameters": [
                     {
                         "type": "string",
@@ -448,9 +448,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "successful operation",
+                        "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/stream.Stream"
+                            "$ref": "#/definitions/types.StreamInfo"
                         }
                     },
                     "400": {
@@ -488,7 +488,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.JSONResultSuccess"
                         }
                     },
                     "400": {
@@ -674,7 +674,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/stream.GetRecordsIteratorStatsResponse"
                         }
                     },
                     "400": {
@@ -720,7 +720,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "$ref": "#/definitions/stream.StreamProperties"
+                            "$ref": "#/definitions/types.StreamProperties"
                         }
                     },
                     "400": {
@@ -758,7 +758,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "$ref": "#/definitions/stream.StreamProperties"
+                            "$ref": "#/definitions/types.StreamProperties"
                         }
                     },
                     "400": {
@@ -796,47 +796,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "$ref": "#/definitions/stream.StreamProperties"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/apierror.APIError"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/stream/{streamuuid}/raw": {
-            "get": {
-                "description": "Get the raw file for the given stream UUID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Stream"
-                ],
-                "summary": "Get stream raw file",
-                "operationId": "stream-get-raw-file",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid.UUID",
-                        "description": "Stream UUID",
-                        "name": "streamuuid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation",
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/types.StreamProperties"
                         }
                     },
                     "400": {
@@ -1095,7 +1055,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.JSONResultListUsers"
                         }
                     }
                 }
@@ -1131,7 +1091,7 @@
                     "200": {
                         "description": "successful operation",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/web.JSONResultPbkdf2"
                         }
                     },
                     "400": {
@@ -1263,6 +1223,26 @@
                 }
             }
         },
+        "stream.GetRecordsIteratorStatsResponse": {
+            "type": "object",
+            "properties": {
+                "lastMessageRead": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "streamIteratorUUID": {
+                    "type": "string"
+                },
+                "streamUUID": {
+                    "type": "string"
+                }
+            }
+        },
         "stream.GetStreamRecordsResponse": {
             "type": "object",
             "properties": {
@@ -1347,7 +1327,25 @@
                 }
             }
         },
-        "stream.Stream": {
+        "stream.RebuildStreamIndexResponse": {
+            "type": "object",
+            "properties": {
+                "duration": {
+                    "type": "integer"
+                },
+                "indexStats": {},
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "streamUUID": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.StreamInfo": {
             "type": "object",
             "properties": {
                 "cptMessages": {
@@ -1357,9 +1355,6 @@
                 "creationDate": {
                     "type": "string"
                 },
-                "filepath": {
-                    "type": "string"
-                },
                 "lastMsgId": {
                     "type": "integer"
                 },
@@ -1367,7 +1362,7 @@
                     "type": "string"
                 },
                 "properties": {
-                    "$ref": "#/definitions/stream.StreamProperties"
+                    "$ref": "#/definitions/types.StreamProperties"
                 },
                 "sizeInBytes": {
                     "type": "integer",
@@ -1379,7 +1374,7 @@
                 }
             }
         },
-        "stream.StreamProperties": {
+        "types.StreamProperties": {
             "type": "object",
             "additionalProperties": true
         },
@@ -1450,9 +1445,6 @@
                 "creationDate": {
                     "type": "string"
                 },
-                "filepath": {
-                    "type": "string"
-                },
                 "lastMsgId": {
                     "type": "integer"
                 },
@@ -1460,7 +1452,7 @@
                     "type": "string"
                 },
                 "properties": {
-                    "$ref": "#/definitions/stream.StreamProperties"
+                    "$ref": "#/definitions/types.StreamProperties"
                 },
                 "sizeInBytes": {
                     "type": "integer",
@@ -1469,6 +1461,46 @@
                 "uuid": {
                     "type": "string",
                     "example": "4ce589e2-b483-467b-8b59-758b339801db"
+                }
+            }
+        },
+        "web.JSONResultListUsers": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "users": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "web.JSONResultPbkdf2": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "digest": {
+                    "type": "string"
+                },
+                "hash": {
+                    "type": "string"
+                },
+                "iterations": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "success"
+                },
+                "salt": {
+                    "type": "string"
                 }
             }
         },
